fixing overflow

--- a/assets/css/langley.css
+++ b/assets/css/langley.css
@@ -74,6 +74,7 @@ body {
   line-height: var(--line-height);
   color: var(--neutralPrimary);
   font-size: 18px;
+  max-width: 100%;
   width: fit-content;
   margin: 0 auto;
 }
